fix(sync): resolve sales sync race condition, notification presence spam, and add collected debt today metric